adl-frontend/src/test/resources/unit/error/syntactic/simple/Primitive1.adl
priitive simple.Primitive1 { 
	source my.c;	
}